Bug 1562184. Convert window opaque region to a WeakFrameRegion. r=mattwoodrow

For retained display lists it needs to be a weak frame region to areas get removed for modified frames and the rest stick around.

Each display item can contribute an opaque region but WeakFrameRegion can only track one rect per frame. It turns out that we only return rects from GetOpaqueRegion except in one hit testing case.

This still means more than one display item per frame could be contributing to the opaque region, we would miss the second and further rects in that case.

Differential Revision: https://phabricator.services.mozilla.com/D38589

--HG--
extra : moz-landing-system : lando